@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.94">
+<addon id="plugin.video.otaku" name="Otaku" provider-name="TeamOtaku" version="0.3.95">
   <requires>
     <!-- <import addon="xbmc.python" version="2.24.0"/> -->
     <import addon="script.module.beautifulsoup4" version="4.5.3" />
@@ -27,9 +27,9 @@
       <fanart>fanart.jpg</fanart>
     </assets>
     <news>
-Changelog 0.3.94 [20230720]:
-- Fix for Smartscroll 
-- Fix for Anime Tosho
+Changelog 0.3.95 [20230722]:
+- Added Hide Episode Info and Plot Setting
+- Fix Scrolling Issue in Source Select
     </news>
   </extension>
 </addon>
